feat: add colors. `testing branch` -> blue, `syntax error` -> red

--- a/templates/legend.inc.html
+++ b/templates/legend.inc.html
@@ -6,6 +6,8 @@
       <p class="dpkg-ver-old">DPKG package older than source (staging) or missing</p>
       <p class="dpkg-ver-same">DPKG package up to date</p>
       <p class="dpkg-ver-deprecated">Source (staging) has removed the package</p>
+      <p class="pkg-status-testing">testing</p>
+      <p class="pkg-status-error">error</p>
     </td>
   </tr>
 </tbody>
