--- a/templates/repo.html
+++ b/templates/repo.html
@@ -13,7 +13,7 @@
     <td class="pkg-name">
       <a href="/packages/{{ pkg.name }}">{{ pkg.name }}</a>
     </td>
-    <td class="pkg-version dpkg-ver-{{ pkg.ver_compare|fmt_ver_compare }}">
+    <td class="pkg-status-{{ pkg.status|fmt_pkg_status }} pkg-version dpkg-ver-{{ pkg.ver_compare|fmt_ver_compare }}">
       {{ pkg.dpkg_version }}</td>
     <td class="pkg-description">{{ pkg.description }}</td>
   </tr>
