ui: `Repositories and Trees` -> `Repositories`

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
   </tr>
 </tbody>
 </table>
-<h2>Repositories and Trees</h2>
-<p>See also: <a href="/qa/">Package Quality Assurance</a></p>
+<h2><a href="/qa/">Package Quality Assurance</a></h2>
+<h2>Repositories</h2>
 <table class="packages">
 <tbody>
   <tr>
