--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <td class="pkg-name">
       <a href="/packages/{{ pkg.name }}">{{ pkg.name }}</a>
     </td>
-    <td class="pkg-version">{{ pkg.full_version }}</td>
+    <td class="pkg-version pkg-status-{{ pkg.status|fmt_pkg_status }} dpkg-ver-{{ pkg.ver_compare|fmt_ver_compare }}">{{ pkg.full_version }}</td>
     <td class="pkg-description">{{ pkg.description }}</td>
   </tr>
 {%- endfor %}
