feat: add page `/license`

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,8 @@
     </main>
     <footer class="page-footer">
       <span>Copyleft 2011–2022, Members of the community. –
-        <a href="https://github.com/AOSC-Dev/packages-site#api">API</a>
+        <a href="https://github.com/AOSC-Dev/packages-site#api">API</a> - 
+        <a href="/license">Third Party Licenses</a>
       </span>
     </footer>
   </div>
