--- a/templates/legend.inc.html
+++ b/templates/legend.inc.html
@@ -6,8 +6,8 @@
       <p class="dpkg-ver-old">DPKG package older than source (staging) or missing</p>
       <p class="dpkg-ver-same">DPKG package up to date</p>
       <p class="dpkg-ver-deprecated">Source (staging) has removed the package</p>
-      <p class="pkg-status-testing">testing</p>
-      <p class="pkg-status-error">error</p>
+      <p class="pkg-status-testing">Package in the testing branch</p>
+      <p class="pkg-status-error">Source file contains error</p>
     </td>
   </tr>
 </tbody>
