templates/legend: reword the legend markings

--- a/templates/legend.inc.html
+++ b/templates/legend.inc.html
@@ -3,11 +3,11 @@
   <tr>
     <th>Legend:</th>
     <td class="legend">
-      <p class="dpkg-ver-same">DPKG package up to date</p>
-      <p class="pkg-status-testing">Package in the testing branch</p>
-      <p class="dpkg-ver-old">DPKG package older than source (staging) or missing</p>
+      <p class="dpkg-ver-same">Package up to date</p>
+      <p class="pkg-status-testing">Package in testing branch</p>
+      <p class="dpkg-ver-old">Package older than source or missing</p>
       <p class="pkg-status-error">Source file contains error</p>
-      <p class="dpkg-ver-deprecated">Source (staging) has removed the package</p>
+      <p class="dpkg-ver-deprecated">Source has removed the package</p>
     </td>
   </tr>
 </tbody>
