fix: search function is not working properly. The search interface should redirect to `search?q=` instead of `search/?q=`.

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <li class="nav-path"><a href="/">Packages</a></li>
         {% block navpath %}{% endblock %}
         <li class="afe-highlight">
-          <form id="searchbox" action="/search/" method="get">
+          <form id="searchbox" action="/search" method="get">
             <input name="q" id="searchinput" placeholder="Search package">
           </form>
         </li>
