feat: allow submission by enter, but prevent default if selected

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
         <li class="afe-highlight">
           <form id="searchbox" action="/search" method="get">
             <input name="q" id="searchinput" placeholder="Search package">
+            <!-- submit by pressing enter -->
+            <input type="submit" hidden />
           </form>
         </li>
       </ul>
